@@ -13,6 +13,10 @@
 * Update - Updated the translation template.
 * Update - Updated the included translations.
 * Update - Fixed instances of formal translations in the informal German translation set.
+* Dev - Replaced use of DOING_AJAX with wp_doing_ajax().
+* Dev - Replaced use of DOING_CRON with wp_doing_cron().
+* Dev - Added validation hint to ignore requireOnce.fileNotFound due to false positives.
+* Dev - Added validation hint to ignore include.fileNotFound due to false positives.
 
 2025-09-08 - version 3.7.0
 * Update - WordPress 6.8 compatible.
